<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ADJLIST" Id="{3c206272-b8a4-4d90-96cd-1d6c7918c2cd}">
    <Declaration><![CDATA[TYPE ST_ADJLIST :
STRUCT
	aAdjNodes : ARRAY[1..3] OF POINTER TO ST_ADJNODE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>