<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_GRAPH" Id="{c81393ad-6803-46b0-9a1f-1773afbdf53d}">
    <Declaration><![CDATA[TYPE ST_GRAPH :
STRUCT
	aAdjLists : ARRAY[1..24] OF POINTER TO ST_ADJLIST;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>