<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="DIJKSTRA" Id="{f12d046f-06b3-4953-8873-24d60fcc44db}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION DIJKSTRA
VAR
	i, nMinDistanceNode, nNodeInList, nAdjacentNode, nDistance: INT;
	aVisited : ARRAY[1..24] OF BOOL;
	aParents : ARRAY[1..24] OF INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[FOR i := 1 TO 24 DO
	GLOBALS.aDistances[i] := CONSTANTS.nIntMax;
	GLOBALS.aRoadFlags[i] := FALSE;
END_FOR

GLOBALS.aDistances[GLOBALS.nStartPosition] := 0;

FOR i := 1 TO 24 DO
	nMinDistanceNode := GET_MIN_DISTANCE_NODE(GLOBALS.aDistances, aVisited);
	aVisited[nMinDistanceNode] := TRUE;
	
	IF NOT (GLOBALS.stGraph.aAdjLists[nMinDistanceNode] = 0) THEN
		FOR nNodeInList := 1 TO 3 DO
			nAdjacentNode := GLOBALS.stGraph.aAdjLists[nMinDistanceNode]^.aAdjNodes[nNodeInList]^.nNode;
			nDistance := GLOBALS.stGraph.aAdjLists[nMinDistanceNode]^.aAdjNodes[nNodeInList]^.nWeight^;
			IF NOT (aVisited[nAdjacentNode]) AND NOT (GLOBALS.aDistances[nMinDistanceNode] = CONSTANTS.nIntMax) AND (GLOBALS.aDistances[nMinDistanceNode] + nDistance < GLOBALS.aDistances[nAdjacentNode]) THEN
				GLOBALS.aDistances[nAdjacentNode] := GLOBALS.aDistances[nMinDistanceNode] + nDistance;
				aParents[nAdjacentNode] :=  nMinDistanceNode;
			END_IF
		END_FOR
	END_IF
END_FOR

GET_SHORTEST_PATH(GLOBALS.nEndPosition, aParents);]]></ST>
    </Implementation>
    <LineIds Name="DIJKSTRA">
      <LineId Id="7" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="97" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="50" Count="8" />
      <LineId Id="73" Count="0" />
      <LineId Id="59" Count="1" />
      <LineId Id="48" Count="1" />
      <LineId Id="77" Count="0" />
      <LineId Id="47" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>